--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 										<br>
 										<br>
 
-										<img src="images/tennis.JPG" width="900" height="500"> 
+										<img src="images/tennis.jpg" width="900" height="500"> 
 										<br>
 
 										My passion for tennis started when I was 6 years old and my dad introduced me to the sport. Since then, I have played competetively and recreationally for that past 13 years and counting. In middle school, I was ranked number one on my team and in high school, I was ranked number 2 on my varsity team. I am a left handed, aggressive baseliner who loves topsin and all things Babolat.
