--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/coding_alternate.png" alt="" />
+									<img src="images/coding_alternate_java.png" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
