--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Rayhan Biju </li><li>Design by<a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Rayhan Biju </li>
 							</ul>
 						</div>
 					</section>
