--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/coding_alternate_java.png" alt="" />
+									<img src="https://external-preview.redd.it/3Xfn9HCVd5frs24U4Z0XMQ7B2vexrajX4LBzWdHXhPc.png?width=640&crop=smart&auto=webp&s=cfffc15fbc5b3ee0c5a4001d11c7943206f0c5f3" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -57,7 +57,7 @@
 										<p>Computer Science Student at Virginia Tech<br />
 										</p>
 									</header>
-									<p>I am a second-year in the <a href="https://cs.vt.edu/"> computer science program </a> in the College of Engineering at Virginia Tech. I have a passion for software engineering especially on the cloud, mobile, and web platforms. My go to coding language is Java due to its powerful object oriented design and compatability. On campus, you can find me enjoying Virginia Tech's dining halls or holding lab hours for my teaching position. This is my personal website where you can see my skills, technical experience, view my resume, find out more about me, or get in touch with me.</p>
+									<p>I am a second-year student in the <a href="https://cs.vt.edu/"> <strong> computer science program </strong></a> in the College of Engineering at Virginia Tech. I have a passion for software engineering especially on the cloud, mobile, and web platforms. My go to coding language is Java due to its powerful object oriented design and compatability. On campus, you can find me enjoying Virginia Tech's dining halls or holding lab hours for my teaching position. Currently, I am looking for <strong> summer 2022 internships </strong> related to software development, software engineering, information technology, or related fields. This is my personal website where you can see my skills, technical experience, view my resume, find out more about me, or get in touch with me.</p>
 								</div>
 							</section>
 
@@ -65,20 +65,21 @@
 							<section id="two">
 								<div class="container">
 									<h3>Few of my Skills</h3>
-									<p>My skills vary from technical to soft skills and I frequently enhance them. Learn more about my skills here <a href = ""> </a></p>
+									<p>My skills vary from technical to soft skills and I frequently enhance them.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-coffee"> Java </li>
 										<li class="icon solid fa-code">Python</li>
-										<li class="icon solid fa-book">C</li>
+										<li class="icon solid fa-file-code">C</li>
 										<li class="icon solid fa-server">Flask</li>
 										<li class="icon solid fa-code-branch">Git</li>
 										<li class="icon solid fa-database">Firebase</li>
-										<li class="icon solid fa-bullhorn">Communication</li>
+										<li class="icon solid fa-project-diagram">API Development</li>
 										<li class="icon solid fa-sitemap">React</li>
 										<li class="icon solid fa-users">Leadership</li>
 										<li class="icon solid fa-wrench">Problem-Solving</li>
 
 									</ul>
+									<p>Learn more about my skills <a href = "#four">here</a></p>
 								</div>
 							</section>
 
@@ -163,7 +164,7 @@
 										<img src="images/nature.jpg" width="900" height="500">
 										<br>
 
-										Nature is very important to me, and I take great pride in helping to take care of the environment. With this, I have been very fortunate to travel and experience nature on six continents. In this picture, I am on a sand dune in Namibia where there is nothing, but sand for miles!
+										Nature is very important to me, and I take great pride in helping to take care of the environment. With this, I have been very fortunate to travel and experience nature on six continents as well as immerse myself in new cultures, which I take great pride in. In this picture, I am on a sand dune in Namibia where there is nothing, but sand for miles!
 
 
 									</p>
@@ -179,10 +180,12 @@
 									<h3>Contact Details</h3>
 									
 									
-									<h4>
-										<a href = "mailto:rayhanbiju@vt.edu"> Email Me At: rayhanbiju2001@gmail.com </a>
+									<p> <strong>
+										<a href = "mailto:rayhanbiju@vt.edu"> Let's get in touch: rayhanbiju2001@gmail.com </a>
 
-									</h4>
+									</strong>
+
+									</p>
 
 									<ul class="icons">
 						<li><a href="https://github.com/rayb26/" class="icon brands fa-github" target="blank"><span class="label">Github</span></a></li>
@@ -200,13 +203,14 @@
 					</div>
 
 				<!-- Footer -->
-					<section id="footer">
+					<center><section id="footer">
 						<div class="container">
+
 							<ul class="copyright">
-								<li>Rayhan Biju </li>
+								<li> <h4><strong> Created by Rayhan Biju <br></strong> </h4> Adapted from HTML5Up.net</li>
 							</ul>
 						</div>
-					</section>
+					</section> </center>
 
 			</div>
 
