--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
+
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/profile_pic.png" alt="" /></span>
+					<span class="image avatar"><img src="images/profile_pic.png" alt="" height="200" width="100" /></span>
 
 
  
@@ -28,6 +29,7 @@
 						<li><a href="#four">Resume</li>
 						<li><a href="#five">Outside of CS</li>
 						<li><a href="#six">Contact</a></li>
+						
 					</ul>
 				</nav>
 				<footer>
@@ -163,7 +165,7 @@
 										<img src="images/nature.jpg" width="900" height="500">
 										<br>
 
-										Nature is very important to me, and I take great pride in helping to take care of the environment. With this, I have been very fortunate to travel and experience nature on six continents as well as immerse myself in new cultures, which I take great pride in. In this picture, I am on a sand dune in Namibia where there is nothing, but sand for miles!
+										Nature is very important to me, and I take great pride in helping to take care of the environment. With this, I have been very fortunate to travel and experience nature on six continents as well as immerse myself in new cultures. In this picture, I am on a sand dune in Namibia where there is nothing, but sand for miles!
 
 
 									</p>
@@ -213,7 +215,7 @@
 
 			</div>
 
-	
+		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
