--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Few of my Skills</h3>
+									<h3>A Few of my Skills</h3>
 									<p>My skills vary from technical to soft skills and I frequently enhance them.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-coffee"> Java </li>
