--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Skills</a></li>
-						<li><a href="#three">Technical Experience</a></li>
-						<li><a href="#four">Resume</li>
-						<li><a href="#five">Outside of CS</li>
-						<li><a href="#six">Contact</a></li>
-						
+						<li><a href="#About" class="active">About</a></li>
+						<li><a href="#Skills">Skills</a></li>
+						<li><a href="#Technical_Experience">Technical Experience</a></li>
+						<li><a href="#Resume">Resume</li>
+						<li><a href="#Outside_Of_CS">Outside of CS</li>
+						<li><a href="#Contact">Contact</a></li>
+
 					</ul>
 				</nav>
 				<footer>
@@ -48,7 +48,7 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<section id="About">
 								<div class="image main" data-position="center">
 									<img src="https://external-preview.redd.it/3Xfn9HCVd5frs24U4Z0XMQ7B2vexrajX4LBzWdHXhPc.png?width=640&crop=smart&auto=webp&s=cfffc15fbc5b3ee0c5a4001d11c7943206f0c5f3" alt="" />
 								</div>
@@ -63,7 +63,7 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<section id="Skills">
 								<div class="container">
 									<h3>A Few of my Skills</h3>
 									<p>My skills vary from technical to soft skills and I frequently enhance them.</p>
@@ -80,14 +80,14 @@
 										<li class="icon solid fa-wrench">Problem-Solving</li>
 
 									</ul>
-									<p>Learn more about my skills <a href = "#four">here</a></p>
+									<p>Learn more about my skills <a href = "#Resume">here</a></p>
 								</div>
 							</section>
 
 
-							<!-- Two -->
+							<!-- Four -->
 
-							<section id="three">
+							<section id="Technical_Experience">
 								<div class="container">
 									<h3>Technical Experience</h3>
 									<p>From teaching to undergraduate research to being a software development intern, I have experienced and continue to experience different avenues of Computer Science, but I have a strong focus on software engineering.</p>
@@ -118,7 +118,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="https://media-exp1.licdn.com/dms/image/C560BAQHbs548sktE3Q/company-logo_200_200/0/1613847995309?e=1639008000&v=beta&t=yPxhbA-Lf7XskAgxpE85BzrSu9xlaTnPjvFZWOhCwAU" alt="BusySquirrels" width="300" height="300" /></a>
+											<a href="#" class="image"><img src="https://media-exp1.licdn.com/dms/image/C560BAQHbs548sktE3Q/company-logo_200_200/0/1613847995309?e=1639008000&v=beta&t=yPxhbA-Lf7XskAgxpE85BzrSu9xlaTnPjvFZWOhCwAU" alt="BusySquirrels"/></a>
 											<div class="inner">
 
 												<h4>Software Development Intern</h4>
@@ -133,16 +133,16 @@
 
 
 						<!-- Three -->
-							<section id="four">
+							<section id="Resume">
 								<div class="container">
 									<h3>My Resume</h3>
-									<iframe src="assets/Resume/Biju_Rayhan_Technical.pdf" width="850" height="1000"> </iframe>
+									<iframe src="assets/Resume/Biju_Rayhan_Technical.pdf" height="1000" width="1000"> </iframe>
 								</div>
 							</section>
 
 
 							<!--Five-->
-							<section id="five">
+							<section id="Outside_Of_CS">
 								<div class="container">
 									<h3>Outside of Computer Science</h3>
 
@@ -176,7 +176,7 @@
 
 
 						<!-- Six -->
-							<section id="six">
+							<section id="Contact">
 								<div class="container">
 									<h3>Contact Details</h3>
 									
