--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 							<section id="Resume">
 								<div class="container">
 									<h3>My Resume</h3>
-									<iframe src="assets/Resume/Biju_Rayhan_Technical.pdf" height="1000" width="1000"> </iframe>
+									<p> <a href = "https://drive.google.com/file/d/1NatmuH3-n0HyRbbrnxrbP1f-oo9ZMqL2/view?usp=sharing" target="blank">https://drive.google.com/file/d/1NatmuH3-n0HyRbbrnxrbP1f-oo9ZMqL2/view?usp=sharing</a></p>
 								</div>
 							</section>
 
