--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 										<p>Computer Science Student at Virginia Tech<br />
 										</p>
 									</header>
-									<p>I am a second-year student in the <a href="https://cs.vt.edu/"> <strong> computer science program </strong></a> in the College of Engineering at Virginia Tech. I have a passion for software engineering especially on the cloud, mobile, and web platforms. My go to coding language is Java due to its powerful object oriented design and compatability. On campus, you can find me enjoying Virginia Tech's dining halls or holding lab hours for my teaching position. This summer, I will be be a software development intern at <a href = "https://www.genworth.com/"> Genworth Financial.</a> This is my personal website where you can see my skills, technical experience, view my resume, find out more about me, or get in touch with me.</p>
+									<p>I am a second-year student in the <a href="https://cs.vt.edu/"> <strong> computer science program </strong></a> in the College of Engineering at Virginia Tech. I have a passion for software engineering especially on the cloud, mobile, and web platforms. My go to coding language is Java due to its powerful object oriented design and compatability. On campus, you can find me enjoying Virginia Tech's dining halls or holding lab hours for my teaching position. This summer, I will be be a software development intern at <a href = "https://www.genworth.com/" target="_blank"> Genworth Financial.</a> This is my personal website where you can see my skills, technical experience, view my resume, find out more about me, or get in touch with me.</p>
 								</div>
 							</section>
 
