--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/profile_pic.png" alt="" height="200" width="100" /></span>
+					<span class="image avatar"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEc2Av1ceLZew/profile-displayphoto-shrink_800_800/0/1633353234959?e=1645056000&v=beta&t=C5nSlmVFJDHfPFAwgr9iP-uxQzO9dWBfE2U32QVB-NI" alt="" height="200" width="100" /></span>
 
 
  
