--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<!-- One -->
 							<section id="About">
 								<div class="image main" data-position="center">
-									<img src="https://external-preview.redd.it/3Xfn9HCVd5frs24U4Z0XMQ7B2vexrajX4LBzWdHXhPc.png?width=640&crop=smart&auto=webp&s=cfffc15fbc5b3ee0c5a4001d11c7943206f0c5f3" alt="" />
+									<img src="https://csgrad.cs.vt.edu/assets/logos/vt_inline_computer_science.png" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
