--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 										<p>Computer Science Student at Virginia Tech<br />
 										</p>
 									</header>
-									<p>I am a second-year student in the <a href="https://cs.vt.edu/"> <strong> computer science program. </strong></a> On campus, you can find me conducting office hours for my TA position or enjoying Virginia Tech's dining halls. This is my personal website where you can see my skills, technical experience, view my resume, find out more about me, or get in touch with me.</p>
+									<p>I am a second-year student in the <a href="https://cs.vt.edu/"> <strong> computer science program. </strong></a> On campus, you can find me conducting office hours for my TA position or enjoying Virginia Tech's dining halls. This is my personal website where you can see my skills, technical experience, view my resume, find out more about me, or get in touch with me. I am proud to announce that this summer, I will be a software engineering intern at Capital One!</p>
 								</div>
 							</section>
 
