added profile pic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEc2Av1ceLZew/profile-displayphoto-shrink_800_800/0/1633353234959?e=1645056000&v=beta&t=C5nSlmVFJDHfPFAwgr9iP-uxQzO9dWBfE2U32QVB-NI" alt="" height="200" width="100" /></span>
+					<span class="image avatar"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEc2Av1ceLZew/profile-displayphoto-shrink_800_800/0/1633353234959?e=1656547200&v=beta&t=_GJCQ3ej3A7AJm-nyLURWlUla5uZlhTCQFpLLl7dgMI" alt="" height="180" width="190" /></span>
 
 
  
@@ -50,7 +50,7 @@
 						<!-- One -->
 							<section id="About">
 								<div class="image main" data-position="center">
-									<img src="https://www.ivanmorozov.com/img/s/v-10/p1349747230-3.jpg" alt="" />
+									<img src="https://i.pinimg.com/736x/07/06/19/070619b9b6254d9e06d8c279dac8fddc--virginia-tech-war-memorials.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
