--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
  
  					<h1 id="logo"><a href="#">Rayhan Biju</a></h1>
-					<p>Student by Day, Programmer by Night<br />
+					<p>Student by Day, Innovator by Night<br />
 				</header>
 				<nav id="nav">
 					<ul>
