--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@
 						<div class="container">
 
 							<ul class="copyright">
-								<li> <h4><strong> Created by Rayhan Biju <br></strong> </h4> Adapted from HTML5Up.net</li>
+								<li> <h4><strong> Created by Rayhan Biju <br></strong> </h4></li>
+<!-- 								
+								Adapted from HTML5Up.net -->
 							</ul>
 						</div>
 					</section> </center>
