--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEc2Av1ceLZew/profile-displayphoto-shrink_800_800/0/1633353234959?e=1656547200&v=beta&t=_GJCQ3ej3A7AJm-nyLURWlUla5uZlhTCQFpLLl7dgMI" alt="" height="180" width="190" /></span>
+					<span class="image avatar"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEc2Av1ceLZew/profile-displayphoto-shrink_200_200/0/1633353234959?e=1664409600&v=beta&t=MapQmpFBThq2nLC_WD_QkfPxqFhC4aAuAh24P0Ain9E" alt="" height="180" width="190" /></span>
 
 
  
@@ -98,9 +98,10 @@
 												<h4>Software Engineer Intern </h4>
 												<small></small> 
 												<p>
-												I am working on implementing REST API's using Go to improve API response times. Additionally, I am working on refactoring a legacy SSO application to modernized Java code using the Spring Boot framework. More to come soon!
+													At Capital One, I used Go to develop APIs in an effort to reduce API response times and increase throughput, finding a decrease of response times by 30 percent. Moreover, I worked with 2 other interns to rewrite a legacy API gateway application for a large SSO system using Spring Boot, Spring Security, OAuth 2.0, and Java.
+
 												</p>
-</p>
+
 											</div>
 										</article>
 										<article>
@@ -147,6 +148,7 @@
 							<section id="Resume">
 								<div class="container">
 									<h3>My Resume</h3>
+
 									<p> <a href = "https://drive.google.com/file/d/11A9ZMcFzyP2AhHmmf8Hl8a1bwQcMZW0B/view?usp=sharing" target="blank">https://drive.google.com/file/d/1NatmuH3-n0HyRbbrnxrbP1f-oo9ZMqL2/view?usp=sharing</a></p>
 								</div>
 							</section>
