--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 									<ul class="feature-icons">
 										<li class="icon solid fa-coffee"> Java </li>
 										<li class="icon solid fa-code">Python</li>
-										<li class="icon solid fa-file-code">C</li>
+										<li class="icon solid fa-file-code">Spring Boot</li>
 										<li class="icon solid fa-server">Flask</li>
 										<li class="icon solid fa-code-branch">Git</li>
 										<li class="icon solid fa-database">Firebase</li>
 										<li class="icon solid fa-project-diagram">API Development</li>
 										<li class="icon solid fa-sitemap">React</li>
-										<li class="icon solid fa-users">Leadership</li>
+										<li class="fa-solid fa-network-wired">Go</li>
 										<li class="icon solid fa-wrench">Data Structures and Algorithms</li>
 
 									</ul>
