--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEc2Av1ceLZew/profile-displayphoto-shrink_200_200/0/1633353234959?e=1664409600&v=beta&t=MapQmpFBThq2nLC_WD_QkfPxqFhC4aAuAh24P0Ain9E" alt="" height="180" width="190" /></span>
+					<span class="image avatar"><img src="images/1633353234959.jpeg" alt="" height=100% width=100% /></span>
 
 
  
