Updated role descript

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
 												<h4>Software Engineer Intern </h4>
 												<small></small> 
 												<p>
-													At Capital One, I used Go to develop APIs in an effort to reduce API response times and increase throughput, finding a decrease of response times by 30 percent. Moreover, I worked with 2 other interns to rewrite a legacy API gateway application for a large SSO system using Spring Boot, Spring Security, OAuth 2.0, and Java.
+													At Capital One, I used Go, PostgreSQL, and Docker to develop a REST API to handle faster load times to an internal news engine. Moreover, I worked with 3 other interns to rewrite a legacy API gateway microservice for a large SSO system using Spring Boot, Spring Security, OAuth 2.0, and Java, increasing the application’s performance by 60% and impacting 400+ internal applications. 
+
 
 												</p>
 
@@ -117,7 +118,8 @@
 											<a href="#" class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Virginia_Tech_Hokies_logo.svg/2560px-Virginia_Tech_Hokies_logo.svg.png" alt="Virginia Tech" /></a>
 											<div class="inner">
 												<h4>Undergraduate Student Researcher</h4>
-												<p>In the Computer Systems Genome research group led by Dr. Godmar Back, Dr. Kirk Cameron, and Professor Ellis, I integrate Python web scraping to aggregate computer processor and system data. I develop REST APIs and create enhancements to our CI/CD pipelines using a tech stack of Python, SQLAlchemy, yaml, and nginx! </p>
+												I used SQLAlchemy, Flask, and Python to develop complex API endpoints, including data from multiple interlinked tables and foreign keys. I thoroughly tested these APIs using Pytest to achieve 100% code coverage. Currently, I am creating a portal for a crowdsourcing campaign for users to make potential updates to our data to be seen through our web app and public APIs that we own using Figma, React, and Python. 
+
 </p>
 											</div>
 										</article>
